--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -188,7 +188,7 @@
 				window.location.href = "frontend_sporterVragenlijst.html?inlogID=" + window.sporterID + "&VoortgangID=" + this.responseText;
 			}
 		};
-		xhr.open("POST", "http://localhost:8082/vulVoortgang/" + oefening, true);
+		xhr.open("POST", "http://localhost:8082/vulVoortgang/" + oefening + "/" + window.sporterID, true);
 		xhr.setRequestHeader("Content-Type", "application/json");
 		xhr.send(objJSON);
 		document.getElementById("displayScherm").innerHTML = document.getElementById("vragenlijstScherm").innerHTML;
@@ -281,7 +281,7 @@
 
 			}
 		};
-		xhr.open("GET", "http://localhost:8082/allVoortgang", true);
+		xhr.open("GET", "http://localhost:8082/allVoortgang/"+window.sporterID, true);
 		xhr.send();
 	}
 	function verwijderOefening() {
