--- a/Frontend/frontend_startScherm.html
+++ b/Frontend/frontend_startScherm.html
@@ -256,7 +256,7 @@
 <body onload="PrintOefeningen()">
     <ul class="nav nav-pills justify-content-center" id="knoppen_Boven">
         <li class="nav-item">
-          <button type="button" class="btn btn-outline-primary" onclick = "showInlogScreen()">INLOGGEN</button>
+          <button type="button" class="btn btn-outline-primary" onclick = "showInlogScreen()">Inloggen</button>
         </li>
         <li class="nav-item">
             <button type="button" id="oefening1" class="btn btn-outline-primary" onclick = "showOefening(1);"></button>
