Als het goed is is het nu klaar

--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -156,7 +156,7 @@
 
 			}
 		};
-		xhr.open("GET", "http://localhost:8082/toonPlanning/" + sporterID, true);
+		xhr.open("GET", "http://localhost:8082/toonPlanning/" + window.sporterID, true);
 		xhr.send();
 
 	}
